--- a/style.css
+++ b/style.css
@@ -44,7 +44,8 @@ body * {
 
 /* Esse comando delimita a caixa onde foi inserido a foto de perfil e o @ */
 #container {
-    width: 360px;
+    width: 100%;
+    max-width: 588px;
     margin: 56px auto 0px;
     padding: 0 24px;
 }
